updated prisma client

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "ts-node": "^10.9.2"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@prisma/client": "^6.12.0",
